# seamless

./: .gitignore  .gitmodules  404.html  README.md  index.html  meson.build  meson_options.txt  refs.bib
.github/workflows/: mkdocs.yml  plugin-build.yml
Configs/: install.sh  jack.conf  main_config.sh  meson.build
Configs/EN325/: oscRouterConfig.txt
Configs/EN325/snapshots/: en325_riviera_jack_connections.xml  en325_wintermute_jack_connections.xml
Configs/HUFO/: blockplan.yml  oscRouterConfig.txt  schedule.yml  showcontrol_config.yml
Configs/HUFO/blocks/: block_a.yml  block_b.yml  default.yml  elektroakustisch.yml  single_run.yml  soundscape.yml  student_pieces.yml
Configs/HUFO/snapshots/: main.snap  player.snap  wfs1.snap  wfs2.snap
Configs/HUFO/tracks/: brunnen.yml  datenerhebung.yml  doublefeedback.yml  iwillnotweep.yml  korea.yml  liquidcontinent.yml  oksus.yml  pune.yml  sculpturalbeatings.yml  skulpturaleschwebungen.yml  sufi.yml  thepassage.yml  trailer.yml  transformation.yml  wasserwelten.yml
Configs/aj-snapshot/: en325_wintermute_jack_connections.xml
Documentation/: mkdocs.yml  requirements.txt
Documentation/Notizen/: what_I_did.md
Documentation/docs/: about.md  adt-decoders.md  index.md  oscrouter.md  paths.md  plugins.md  reaper.md  reverb.md  showcontrol.md  signalflow.md  supercollider.md  system_setup.md  wonder.md
Documentation/notes/: Riviera_Installation.md
Faust/: FoaReverb.dsp  faust-build.sh  meson.build  reverb.dsp
Faust/reverb/: FoaReverb.cpp  FoaReverb.dsp  FoaReverb.schelp
Graphics/: EN325_WFS.drawio  HuFo_Flow.drawio  ReaperDiagramm.dia  Untitled Diagram.drawio  hufo_flow_1.dia  hufo_flow_2.dia
OscRouter/: CommunicationClients.py  MAIN_oscrouter.py  MaxRouterTester.maxpat  configSample.txt  conversionsTools.py  hufoTouch.tosc  main_localSwitcher.py  meson.build  oscRouterConfig.txt  osccomcenter.py  oscinput.txt  rendererclass.py  soundobjectclass.py  str_keys_conventions.py
OscRouter/localUiOscRouter/: CommunicationClients.py  hufoTouch.tosc  main_localSwitcher.py  oscPortsEtc.txt  simpleSpatViewer 2.maxpat  simpleSpatViewer.maxpat
Oscar/: oscar.xml
Oscar/OSCar-windows/: OSCar-1.2.2-win64\doc\oscar-example.maxpat  OSCar-1.2.2-win64\doc\oscar.xml  OSCar-1.2.2-win64\vst3\OSCar.vst3
Puredata/: speaker-test.pd  test-sender.pd
Reaper-Sampleprojects/64-Sources_fixedFormats/: 64-Sources_fixedFormats.RPP
Reaper-Sampleprojects/SystemTest/: TouchOscMax.maxpat  multiPurposeSpatial.touchosc  ps-multiPurposeTouchOsc_2.maxpat  ps-wrapAngle180.maxpat
Reaper-Sampleprojects/hufo-reaper-sampleProject/: 64-Sources_fixedFormats_docu.RPP  example-Playback.RPP  hufo-reaper-sampleProject.RPP
Reaper-Sampleprojects/reaper_scripts/: procAzimEnvelope.eel  ps_CreateTracks.eel  (+2 more)
SHELL/: start_jack.sh  start_jack.sh~  supercollider_gui.sh  supercollider_nogui.sh
SeamLess_Plugins/: CMakeLists.txt  Readme.md  rebuild_linux.sh
Services/: aj-snapshot.service  aj-snapshot@.service  ambdec_3rd@.service  decoder.service  en325_riviera_jack_connections.xml  jack.service  meson.build  oscrouter.service  oscrouter@.service  sc_mix.service  sc_mix.service.in  sc_mix@.service.in  sc_wfs.service  sc_wfs.service.in  sc_wfs@.service.in  twonder.service  wonder.service  wonder_connections.service
Services/MAIN/: sc_mix@.service
Services/WFS/: sc_wfs.service  sc_wfs@.service
Services/polkit-1/rules.d/: 49-nopasswd_limited.rules
Services/system/: aj-snapshot@.service  ambdec_3rd@.service  ambdec_rev@.service  oscrouter@.service  seamless_jack@.service
Services/user/: aj-snapshot.service  ambdec_3rd.service  ambdec_rev.service  oscrouter.service  restart_showcontrol.service  restart_showcontrol.timer  seamless_jack.service  showcontrol.service
ShowControl/: HufoShowControl.ReaperOSC  add_offset_to_schedule.py  common.py  example.yml  hufoprogram_2023-04-04.txt  hufoprogram_23-01-20.txt  hufoprogram_30-05-22.txt  hufoprogramm_2023-07-11.txt  main.py  meson.build  panelList.txt  panelpinger.py  requirements.txt  schedListTxtCreator.py  schedcontrol.py  schedule.yml  schedule_generator.py  showYamlCreator.py  showcontrol.py  showcontrol_config.yml  test.sh
ShowControl/readable_schedules/: hufoprogram_2023-03-27.txt  hufoprogram_2023-07-25.txt  hufoprogram_2023-08-01.txt  hufoprogram_2023-08-01_track_schedule.txt  hufoprogram_2023-09-05_full_schedule.txt  hufoprogram_2023-09-05_track_schedule.txt  hufoprogram_2023-09-19_full_schedule.txt  hufoprogram_2023-09-19_track_schedule.txt
ShowControl/webcontrol/: __init__.py  auth.py  blog.py  schema.sql  showcontrol.py
ShowControl/webcontrol/static/: style.css
ShowControl/webcontrol/templates/: base.html
ShowControl/webcontrol/templates/auth/: change_password.html  register.html  users.html
ShowControl/webcontrol/templates/showcontrol/: pause.html  tracks.html
Standalone_Decoders/: EN325_DOME1  EN325_DOME2  EN325_DOME3  HUFO_HOA1  HUFO_HOA2  HUFO_HOA3  faust-build.sh  meson.build
SuperCollider/: HuFo_HOA_SYNTHDEFS.sc  HuFo_MISC_SYNTHDEFS.sc  HuFo_REMOTE.sc  HuFo_SERVER.scd  HuFo_SNIPPETS.scd  HuFo_SYNTHDEFS.sc  HuFo_WFS.scd  README.md  make_EN325_HOA.sc  make_HuFo_HOA.sc  meson.build
SystemControl/: systemcontrol.py
Videoplayers/: move_videos_to_machines.py  prepare_videos.py
about/: index.html
adt-decoders/: index.html
oscrouter/: index.html
paths/: index.html
plugins/: index.html
reaper/: index.html
reverb/: index.html
search/: search_index.json
signalflow/: index.html
speakerpositions/: HufoAmbisonics_resorted.txt  Hufo_AmbiSpeakerPositions.txt  Hufo_AmbiSpeakerPositions.xlsx  Hufo_AmbiSpeakerPositions_AED.txt  Hufo_AmbiSpeakerPositions_XYZ.txt  Hufo_AmbiSpeakerPositions_zero175.txt  Hufo_AmbiSpeakerPositions_zero175_AED.txt  Hufo_AmbiSpeakerPositions_zero175_XYZ.txt  Hufo_AmbiSpeakerPositions_zeroWFS.txt  Hufo_AmbiSpeakerPositions_zeroWFS_AED.txt  Hufo_AmbiSpeakerPositions_zeroWFS_XYZ.txt  Hufo_WFS_Panels.txt  Hufo_allSpeakerpositions.xlsx  README.md  createPolygonLines.py  createWfsXMLs.py  plotPolygon.py
supercollider/: index.html
wonder/: index.html
(+160 files in other folders)
